# rapamycin-model

./: .gitignore  .zenodo.json  Dockerfile  README.md  pyproject.toml  rapamycin_model.omex
.github/workflows/: docker.yml  python.yml
models/: rapamycin_body.md  rapamycin_body.xml  rapamycin_body_flat.md  rapamycin_body_flat.xml  rapamycin_intestine.md  rapamycin_intestine.xml  rapamycin_kidney.md  rapamycin_kidney.xml  rapamycin_liver.xml
release-notes/: 0.1.0.md  0.2.0.md  0.3.0.md
simulation/: index.html
simulation/BasaDenes2019/: BasaDenes2019.html  BasaDenes2019.json  BasaDenes2019_rapamycin_RAP05.tsv  BasaDenes2019_rapamycin_RAP05_S3.tsv  BasaDenes2019_rapamycin_RAP05_S5.tsv  BasaDenes2019_rapamycin_RAP10.tsv  BasaDenes2019_rapamycin_RAP10_B1.tsv  BasaDenes2019_rapamycin_RAP10_B3.tsv  BasaDenes2019_rapamycin_RAP10_B6.tsv  BasaDenes2019_rapamycin_RAP10_B8.tsv  BasaDenes2019_rapamycin_RAP2.tsv  BasaDenes2019_rapamycin_RAP2_A1.tsv  BasaDenes2019_rapamycin_RAP2_A3.tsv  BasaDenes2019_rapamycin_RAP2_A4.tsv  BasaDenes2019_rapamycin_RAP2_A6.tsv  BasaDenes2019_rapamycin_RAP2_A7.tsv  BasaDenes2019_rapamycin_RAP2_A8.tsv  BasaDenes2019_rapamycin_RAP40.tsv  BasaDenes2019_rapamycin_RAP40_C1.tsv  BasaDenes2019_rapamycin_RAP40_C2.tsv  BasaDenes2019_rapamycin_RAP40_C3.tsv  BasaDenes2019_rapamycin_RAP40_C4.tsv  BasaDenes2019_rapamycin_RAP40_C5.tsv  BasaDenes2019_rapamycin_RAP40_C6.tsv  BasaDenes2019_rapamycin_RAP40_C7.tsv  BasaDenes2019_rapamycin_RAP40_C8.tsv  BasaDenes2019_rapamycin_RAP40_FD.tsv  BasaDenes2019_rapamycin_RAP40_FD_D1.tsv  BasaDenes2019_rapamycin_RAP40_FD_D3.tsv  BasaDenes2019_rapamycin_RAP40_FD_D4.tsv  BasaDenes2019_rapamycin_RAP40_FD_D7.tsv  BasaDenes2019_rapamycin_RAP40_FD_D8.tsv
simulation/Bottiger2001/: Bottiger2001.html  Bottiger2001.json  Bottiger2001_rapamycin_RAP10.tsv
simulation/Brattstrom2000/: Brattstrom2000.html  Brattstrom2000.json  Brattstrom2000_rapamycin_RAP_D03.tsv  Brattstrom2000_rapamycin_RAP_D1.tsv  Brattstrom2000_rapamycin_RAP_D3.tsv  Brattstrom2000_rapamycin_RAP_D5.tsv  Brattstrom2000_rapamycin_RAP_D8.tsv
(+361 files in other folders)
